--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "wdio": "wdio run wdio.conf.js"
+        "wdio": "wdio run wdio.conf.js",
+        "test-e2e-chrome": "wdio ./test/configs/wdio.local.chrome.conf.js",
+        "test-e2e-safari": "wdio ./test/configs/wdio.local.safari.conf.js",
+        "test-e2e-firefox": "wdio ./test/configs/wdio.local.firefox.conf.js",
+        "test-e2e-iphone12pro": "wdio ./test/configs/wdio.local.iphone12pro.conf.js",
+        "test-e2e-iphone8": "wdio ./test/configs/wdio.local.iphone8.conf.js",
+        "test-e2e-google3XL": "wdio ./test/configs/wdio.local.google3XL.conf.js",
+        "allure:report": "allure generate allure-results --clean -o allure-report",
+        "allure:open": "allure open allure-report",
+        "pretest": "rm -rf allure-results & rm -rf allure-report"
     },
     "repository": {
         "type": "git",
@@ -14,11 +23,18 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.19.6",
+        "@babel/preset-env": "^7.19.4",
+        "@babel/register": "^7.18.9",
+        "@wdio/allure-reporter": "^7.14.1",
         "@wdio/cli": "^7.25.4",
         "@wdio/jasmine-framework": "^7.25.4",
         "@wdio/local-runner": "^7.25.4",
+        "@wdio/reporter": "^7.16.3",
         "@wdio/spec-reporter": "^7.25.4",
+        "allure-commandline": "^2.13.8",
         "chromedriver": "^107.0.3",
-        "wdio-chromedriver-service": "^8.0.0"
+        "wdio-chromedriver-service": "^8.0.0",
+        "wdio-geckodriver-service": "^2.1.0"
     }
 }
